--- a/server/src/main/resources/bootstrap.yml
+++ b/server/src/main/resources/bootstrap.yml
@@ -28,10 +28,9 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMilliseconds: 3000
+            timeoutInMilliseconds: 1000
 feign:
   hystrix:
     enabled: true
-
-
-
+management:
+  context-path: /
